# DorkForge

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
dorkforge/: __init__.py
dorkforge/ai/: __init__.py  base.py  claude_provider.py  deepseek_provider.py  detector.py  gemini_provider.py  grok_provider.py  groq_provider.py  huggingface_provider.py  ollama_provider.py  openai_provider.py
dorkforge/core/: __init__.py  dork.py  engine.py  exceptions.py  optimizer.py  permutator.py  translator.py  validator.py
dorkforge/export/: __init__.py  base.py  csv_exporter.py  json_exporter.py  markdown.py  txt.py
dorkforge/templates/: __init__.py  loader.py  models.py  repository.py
dorkforge/templates/data/: admin_panels.yaml  api_endpoints.yaml  authentication.yaml  backup_files.yaml  cloud_buckets.yaml  config_files.yaml  database_files.yaml  database_panels.yaml  development.yaml  devops.yaml  error_messages.yaml  exposed_documents.yaml  financial_data.yaml  iot_cameras.yaml  log_files.yaml  login_pages.yaml  modern_frameworks.yaml  open_directories.yaml  saas_leaks.yaml  sensitive_files.yaml  server_info.yaml  social_media.yaml  source_code.yaml  vulnerable_plugins.yaml
dorkforge/ui/: __init__.py
extension/: manifest.json  popup.html  popup.js  style.css
extension/data/: templates.json
extension/js/: dorkforge-core.js
scripts/: bundle_templates.py
tests/: verify.py  verify_full_system.py
web/static/css/: achievements.css  background-effects.css  category-search.css  category-settings.css  concat.css  (+5 more)
web/templates/: index.html
(+9 files in other folders)
